# airsoft-bomb-prop

./: README.md
hw/: kibot.sh
sw/: .clang-format  .gitignore  Makefile  README.md  config.yaml  esphome.sh  game_mode_countdown.yaml  game_mode_defusal.yaml  game_mode_domination.yaml  (+3 more)
sw/src-pc/: CMakeLists.txt  build.sh  main.cpp  mock_esphome.hpp  run.sh
sw/src-pc/tests/: test.sh  test_countdown_game  test_countdown_game_restart  test_countdown_game_w_delay  test_countdown_max_delay  test_countdown_reset_end  test_countdown_reset_game  test_countdown_reset_prep  test_countdown_reset_setup  test_countdown_setup_back_key  test_countdown_setup_back_menu  test_countdown_setup_input  test_countdown_setup_invalid_input  test_countdown_setup_scroll_down  test_countdown_setup_scroll_up  test_defusal_buttons_game_disarm  test_defusal_buttons_game_explode  test_defusal_buttons_game_restart  test_defusal_buttons_game_w_delay_disarm  test_defusal_buttons_reset_end  test_defusal_buttons_reset_game  test_defusal_buttons_reset_prep  test_defusal_code_game_bad_code  test_defusal_code_game_bad_code_less_time  test_defusal_code_game_disarm  test_defusal_code_game_explode_armed  test_defusal_code_game_restart  test_defusal_code_reset_end  test_defusal_code_reset_game  test_defusal_code_reset_prep  test_defusal_reset_setup  test_defusal_setup_back_key  test_defusal_setup_back_menu  test_defusal_setup_input  test_defusal_setup_invalid_input  test_domination_game  test_domination_game_max_delay  test_domination_game_w_delay  test_domination_reset_end  test_domination_reset_game  (+37 more)
(+130 files in other folders)
